--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,11 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require css/bootstrap
+ *= require css/style
+ *= require css/responsive
+ *= require css/color1
+ *= require css/animate
  *= require_tree .
  *= require_self
  */
