--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -351,6 +351,6 @@
         <a class="go-top">            
         </a> 
     </div>  
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload',  'data-turbolinks-eval': "false"  %>
   </body>
 </html>
