Fix theme responsiveness

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,4 +17,11 @@
  *= require css/animate
  *= require_tree .
  *= require_self
+ *= stub css/font-awesome
+ *= stub css/owl.carousel
+ *= stub css/shortcodes
+ *= stub css/simple-line-icons
+ *= stub css/revolution-slider
+ *= stub css/jquery.fancybox
+ *= stub css/magnific-popup
  */
