--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -5,14 +5,14 @@
   * Author URI: http://www.themesflat.com
 */
 
-@import url("font-awesome.css");
-@import url("flexslider.css");
-@import url("owl.carousel.css");
-@import url("shortcodes.css");
-@import url("simple-line-icons.css");
-@import url("revolution-slider.css");
-@import url("jquery.fancybox.css");
-@import url("magnific-popup.css");
+@import "css/font-awesome";
+@import "css/flexslider";
+@import "css/owl.carousel";
+@import "css/shortcodes";
+@import "css/simple-line-icons";
+@import "css/revolution-slider";
+@import "css/jquery.fancybox";
+@import "css/magnific-popup";
 @import url("https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Karla:400,400i,700,700i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|PT+Serif:400,400i,700,700i");
 
 /** 
