--- a/app/views/rfq/new.html.erb
+++ b/app/views/rfq/new.html.erb
@@ -2,11 +2,11 @@
 	<h2>
 		Get a Quote
 	</h2>
-	<%=form_for :rfqs do |f|%>
+	<%=form_for :rfq, url: "/rfq" do |f|%>
 		<div class="row">
 			<div class="col-xs-12 col-sm-6">
 				<div class="form-group">
-					<%=f.text_field :commodity_type_id, placeholder: "Product Category eg. Coil, Sheet, LLDP etc.*", class: "form-control"%>
+					<%=f.collection_select :commodity_type_id, @commodities, :id, :name%>
 				</div>
 				<div class="form-group">
 					<%=f.text_field :description, placeholder: "Product description", class: "form-control"%>
@@ -19,7 +19,7 @@
 					</div>
 					<div class="col-xs-6 col-sm-2">
 						<div class="form-group">
-							<select class="form-control" style="height: 50px">
+							<select class="form-control" style="height: 50px; background-color: rgba(0, 0, 0, 0.05)">
 								<option disabled="disabled" selected="selected">UOM</option>
 								<option>EOM</option>
 							</select>
@@ -30,9 +30,14 @@
 							<%=f.number_field :pincode, placeholder: "Pincode", class: "form-control"%>
 						</div>
 					</div>
-					<div class="col-xs-6 col-sm-5">
+					<div class="col-xs-6 col-sm-6">
 						<div class="form-group">
 							<%=f.number_field :mobile_number, placeholder: "Mobile Number", class: "form-control"%>
+						</div>
+					</div>
+					<div class="col-xs-6 col-sm-6">
+						<div class="form-group">
+							<button class="btn btn-primary ">Post requirement</button>
 						</div>
 					</div>
 				</div>
