--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="<%= controller_name %> <%= action_name %>">
     <div class="boxed">
         <div id="site-header">
             <div class="flat-top">
@@ -251,6 +251,20 @@
                 </div><!-- /.header-inner --> 
             </header><!-- /.header -->
         </div>
+        <% if notice %>
+          <div class="alert alert-success" role="alert">
+            <button class="close" data-dismiss="alert"></button>
+            <strong>Success: </strong><%= notice %>
+          </div>
+        <% end %>
+        <% if alert %>
+          <% if alert.length > 0 %>
+            <div class="alert alert-danger" role="alert">
+              <button class="close" data-dismiss="alert"></button>
+              <strong>Alert: </strong><%= alert %>
+            </div>
+          <%end%>
+        <% end %>
         <%= yield %>
         <footer class="footer">
             <div class="footer-widgets">
