--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
                         <div class="flat-wrapper">
                             <div class="custom-info">
                                 <span>Have any questions?</span>
-                                <span><i class="fa fa-phone"></i>+21 383 866 246</span>
-                                <span><i class="fa fa-envelope"></i>support@linethemes.com</span> 
+                                <span><i class="fa fa-phone"></i>+1 999 999 999</span>
+                                <span><i class="fa fa-envelope"></i>example@example.com</span> 
                             </div>
 
                             <div class="social-links">
@@ -49,7 +49,7 @@
                         <div class="row">
                             <div class="flat-wrapper">
                                 <div id="logo" class="logo">
-                                    <a href="index.html">
+                                    <a href="/">
                                         <%=image_tag "images/logo.png"%>
                                     </a>
                                 </div><!-- /.logo -->
@@ -273,7 +273,7 @@
                         <div class="col-md-3">
                             <div class="widget widget_text style_1">
                                 <div class="textwidget">
-                                    <h1><strong>Fusion</strong> a model Business wp theme</h1>
+                                    <h1><strong>Market</strong> an SME supporter</h1>
                                 </div>
                             </div><!-- /.widget_text -->
                         </div><!-- /.col-md-3 -->
@@ -305,11 +305,11 @@
                                     <p><strong>Headquarters:</strong><br>66 Nicholson Street Buffalo New York US 14214</p>
                                     <p>
                                         <i class="fa fa-phone ft-widget-margin-right-12"></i> 001-123-456-7890<br>
-                                        <i class="fa fa-envelope-o ft-widget-margin-right-10"></i> support@linethemes.com
+                                        <i class="fa fa-envelope-o ft-widget-margin-right-10"></i> example@example.com
                                     </p>
                                     <p>
                                         <i class="fa fa-phone ft-widget-margin-right-12"></i> 001-123-456-7890<br>
-                                        <i class="fa fa-envelope-o ft-widget-margin-right-10"></i> manager@linethemes.com
+                                        <i class="fa fa-envelope-o ft-widget-margin-right-10"></i> example@example.com
                                     </p>
                                     <p>
                                         <i class="fa fa-calendar ft-widget-margin-right-12"></i> Mon - Sat: 8:00 Am - 18:00 Pm<br>
@@ -353,7 +353,7 @@
                                 </div>
                                 <div class="copyright">
                                     <div class="copyright-content">
-                                        Copyright © 2016 Fusion Theme by <a href="http://corpthemes.com/" target="_blank">Corpthemes</a>
+                                        Copyright © 2018
                                     </div>
                                 </div>
                             </div><!-- /.ft-wrap -->
