--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,10 +4,10 @@
             <li data-transition="random-static" data-slotamount="7" data-masterspeed="1000" data-saveperformance="on">
                 <%=image_tag "images/slides/1.jpg"%>
                 <div class="tp-caption sfl title-slide text-center" data-x="center" data-y="203" data-speed="1000" data-start="1000" data-easing="Power3.easeInOut">                            
-                    Build the business plan <br>your company
+                    Buy steel at <br>Never before prices
                 </div>  
                     
-                <div class="tp-caption sfl flat-button-slider bg-button-slider-333333" data-x="398" data-y="473" data-speed="1000" data-start="2000" data-easing="Power3.easeInOut"><a href="#">Read More</a></div>
+                <a href="/rfqs/new"><div class="tp-caption sfl flat-button-slider bg-button-slider-333333" data-x="398" data-y="473" data-speed="1000" data-start="2000" data-easing="Power3.easeInOut">Place Order</div></a>
 
                 <div class="tp-caption sfr flat-button-slider" data-x="588" data-y="473" data-speed="1000" data-start="2000" data-easing="Power3.easeInOut"><a href="#">Contact Us</a></div>
 
@@ -20,10 +20,10 @@
             <li data-transition="random-static" data-slotamount="7" data-masterspeed="1000" data-saveperformance="on">
                 <%=image_tag "images/slides/2.jpg"%>
                 <div class="tp-caption sfl title-slide text-center" data-x="center" data-y="203" data-speed="1000" data-start="1000" data-easing="Power3.easeInOut">                            
-                    Prepare the Draft of Your<br> &nbsp;Company's Application.
+                    Buy oil at <br>Never before prices
                 </div>  
                     
-                <div class="tp-caption sfl flat-button-slider bg-button-slider-333333" data-x="398" data-y="473" data-speed="1000" data-start="2000" data-easing="Power3.easeInOut"><a href="#">Read More</a></div>
+                <a href="/rfqs/new"><div class="tp-caption sfl flat-button-slider bg-button-slider-333333" data-x="398" data-y="473" data-speed="1000" data-start="2000" data-easing="Power3.easeInOut">Place Order</div></a>
 
                 <div class="tp-caption sfr flat-button-slider" data-x="588" data-y="473" data-speed="1000" data-start="2000" data-easing="Power3.easeInOut"><a href="#">Contact Us</a></div>
                 <div class="tp-caption sfb flat-down" data-x="center" data-y="bottom" data-speed="1000" data-start="2000" data-easing="Power3.easeInOut">
@@ -34,10 +34,10 @@
             <li data-transition="slidedown" data-slotamount="7" data-masterspeed="1000" data-saveperformance="on">
                 <%=image_tag "images/slides/3.jpg"%>
                 <div class="tp-caption sfl title-slide text-center" data-x="center" data-y="203" data-speed="1000" data-start="1000" data-easing="Power3.easeInOut">                            
-                    Service of Accounting and<br>Management Support
+                    Buy Polymer at<br>Never before prices
                 </div>  
                     
-                <div class="tp-caption sfl flat-button-slider bg-button-slider-333333" data-x="398" data-y="473" data-speed="1000" data-start="2000" data-easing="Power3.easeInOut"><a href="#">Read More</a></div>
+                <a href="/rfqs/new"><div class="tp-caption sfl flat-button-slider bg-button-slider-333333" data-x="398" data-y="473" data-speed="1000" data-start="2000" data-easing="Power3.easeInOut">Place Order</div></a>
 
                 <div class="tp-caption sfr flat-button-slider" data-x="588" data-y="473" data-speed="1000" data-start="2000" data-easing="Power3.easeInOut"><a href="#">Contact Us</a></div>
                 <div class="tp-caption sfb flat-down" data-x="center" data-y="bottom" data-speed="1000" data-start="2000" data-easing="Power3.easeInOut">
