--- a/app/assets/javascripts/rfqs.js.erb
+++ b/app/assets/javascripts/rfqs.js.erb
@@ -1,20 +1,32 @@
 $(document).ready(function(){
 	if($("body").hasClass("rfqs new")){
 		$("#btn-post-rfq").on("click", function(e){
-			var input_term = $("#commodities-search").val();
-			var option = $(".searchable-option[value='"+ input_term + "']");
+			var input_term = $("#commodities-input-rfq-new").val();
+			var option = $(".datalist-option-commodities[value='"+ input_term + "']");
 
 			if(option.length != 0){
-				alert(option.data("value"));
 				$("#commodity_type_id").attr("value", option.data("value"));
 			}
 			else{
 				alert("We don't provide the commodity you searched for, yet!");
 				e.preventDefault();
 			}
+			//End check for commodities-search
+
+			var input_term = $("#commodities-descriptions-input-rfq-new").val();
+			var option = $(".datalist-option-description[value='"+ input_term + "']");
+
+			if(option.length != 0){
+				$("#commodity_type_description_id").attr("value", option.data("value"));
+			}
+			else{
+				alert("Invalid product description!");
+				e.preventDefault();
+			}
+			//End check for commodities-description
 		});
 		$("#commodities-input-rfq-new").on("keyup", function(){
-			//remove all existing children
+			//remove all existing children of datalist
 			var dataList = document.getElementById("commodities-datalist-rfq-new");
 			var input = $(this);
 			while(dataList.lastChild){
@@ -33,7 +45,7 @@ $(document).ready(function(){
 		      	var option = document.createElement("option");
 		      	option.setAttribute("value", item.name);
 		      	option.setAttribute("data-value", item.id);
-		      	option.setAttribute("class", "searchable-option");
+		      	option.setAttribute("class", "datalist-option-commodities");
 		      	dataList.appendChild(option);
 		      });
 		    },
@@ -42,6 +54,34 @@ $(document).ready(function(){
 		    }
 		  });
 		});
-		$();
+		$("#commodities-descriptions-input-rfq-new").on("keyup", function(){
+			//remove all existing children of datalist
+			var dataList = document.getElementById("commodities-description-datalist-rfq-new");
+			var input = $(this);
+			while(dataList.lastChild){
+				dataList.removeChild(dataList.lastChild);
+			}
+			$.ajax({
+		    url: "/commodities/search",
+		    type: "GET",
+		    dataType: "json",
+		    data: {
+		      'commodity': input.val()
+		    	},
+		    success: function (data, status, jqXHR) {
+					var jsonData = JSON.parse(data.data);
+		      jsonData.forEach(function(item){
+		      	var option = document.createElement("option");
+		      	option.setAttribute("value", item.name);
+		      	option.setAttribute("data-value", item.id);
+		      	option.setAttribute("class", "datalist-option-commodities");
+		      	dataList.appendChild(option);
+		      });
+		    },
+		    error: function (jqXHR, status, err) {
+		      console.log("Error" + err);
+		    }
+		  });
+		});
 	}
 });
