--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -302,7 +302,7 @@
                             <div class="widget widget_text information style_1">
                                 <h3 class="widget-title"><span class="style_1">C</span>ontact Us</h3>
                                 <div class="textwidget">
-                                    <p><strong>Headquarters:</strong><br>66 Nicholson Street Buffalo New York US 14214</p>
+                                    <p><strong>Headquarters:</strong><br>Avalon Labs, Homaramu, Benguluru</p>
                                     <p>
                                         <i class="fa fa-phone ft-widget-margin-right-12"></i> 001-123-456-7890<br>
                                         <i class="fa fa-envelope-o ft-widget-margin-right-10"></i> example@example.com
