--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,7 +31,7 @@
                 </div>
             </li>
 
-            <li data-transition="slidedown" data-slotamount="7" data-masterspeed="1000" data-saveperformance="on">
+            <li data-transition="random-static" data-slotamount="7" data-masterspeed="1000" data-saveperformance="on">
                 <%=image_tag "images/slides/3.jpg"%>
                 <div class="tp-caption sfl title-slide text-center" data-x="center" data-y="203" data-speed="1000" data-start="1000" data-easing="Power3.easeInOut">                            
                     Buy Polymer at<br>Never before prices
