Add admin index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,3 +25,7 @@
  *= stub css/jquery.fancybox
  *= stub css/magnific-popup
  */
+.margin-vertical-30px{
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
