--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -45,7 +45,8 @@
 														</li>
 													</ul>
 												</div><!-- /.menu-extra -->                              
-											</nav></div><!-- /.nav-wrap -->
+											</nav>
+										</div><!-- /.nav-wrap -->
 									</div><!-- /.flat-wrapper -->
 								</div><!-- /.row -->
 							</div><!-- /.container -->             
